Prevent GitHub button from shifting

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -241,7 +241,7 @@
 }
 
 .menu-item__github-button {
-  min-width: 60px;
+  min-width: 83px;
   margin-top: 13px;
 }
 
